--- a/src/main/resources/assets/travelersbackpack/lang/fi_fi.json
+++ b/src/main/resources/assets/travelersbackpack/lang/fi_fi.json
@@ -4,31 +4,31 @@
 
   "key.travelersbackpack.category": "Matkustajan reppu",
   "key.travelersbackpack.inventory": "Repun tavaraluettelo",
-  "key.travelersbackpack.toggle_tank": "Toggle Hose Tank",
-  "key.travelersbackpack.cycle_tool": "Vaihda työkalua tai vaihda Letku tilaa",
+  "key.travelersbackpack.toggle_tank": "Vaihda tankkiin letku",
+  "key.travelersbackpack.cycle_tool": "Vaihda työkalua tai vaihda letkun asetusta",
 
   "action.travelersbackpack.unequip_nobackpack": "Sinulla ei ole reppua jota riisua.",
   "action.travelersbackpack.unequip_nospace": "Et voi lisätä uutta reppua tavaraluetteloosi, Koska sinulla ei ole tilaa sille.",
   "action.travelersbackpack.equip_otherbackpack": "Sinulla on jo reppu päällä.",
-  "action.travelersbackpack.equip_fail": "Et pysty laittamaan reppua päälle.",
+  "action.travelersbackpack.equip_fail": "Et pystynyt pukemaan reppua.",
   "action.travelersbackpack.deploy_sleeping_bag": "Et voi avata makuupussia! Tarkista lähistösi.",
 
   "information.travelersbackpack.backpack_coords": "Reppusi on sijainnissa",
   "information.travelersbackpack.backpack_drop": "Sinulla ei ole tilaa repulle. Tiputetaan tavara sijaintiin",
 
-  "screen.travelersbackpack.none": "tyhjä",
+  "screen.travelersbackpack.none": "Tyhjä",
   "screen.travelersbackpack.empty": "Tyhjä",
   "screen.travelersbackpack.empty_tank": "Tyhjä",
   "screen.travelersbackpack.disabled_crafting": "Rakentaminen poissapäältä",
 
-  "information.travelersbackpack.warning.1": "Traveler's Backpack has changed most of its inventory code.",
-  "information.travelersbackpack.warning.2": "Read if you updated the mod from version 5.3.1 or 5.3.2 for 1.16.4, else you can skip.",
-  "information.travelersbackpack.warning.3": "Make sure to extract every item from your backpack before entering the world with new version.",
+  "information.travelersbackpack.warning.1": "Matkustajan reppu modi on muuttanut suurimman osan tavaraluettelo koodistaan.",
+  "information.travelersbackpack.warning.2": "Lue jos päivit modin versioista 5.3.1 tai 5.3.2 versioon 1.16.4, muuten voit ohittaa tämän ilmoituksen.",
+  "information.travelersbackpack.warning.3": "varmista että siirrät kaikki tavarat repustasi, ennenkuin liityt uudemman version maailmaan.",
   "information.travelersbackpack.warning.4": "Muuten ne poistetaan ikuisesti.",
   "information.travelersbackpack.warning.5": "Tämän viestin pitäisi ilmestyä vain kerran.",
 
   "obtain.travelersbackpack.bat": "Repun voi saada Hylätyistä kaivoksista tai tyrmistä",
-  "obtain.travelersbackpack.iron_golem": "Saatavilla seppä kyläläisten arkuista",
+  "obtain.travelersbackpack.iron_golem": "Saatavilla sepältä",
   "obtain.travelersbackpack.electric": "Repun saa pitämällä timantti reppua päällä ja ottamalla salaman iskusta",
   "obtain.travelersbackpack.pigman": "Repun saa pitämällä sika reppua päällä ja ottamalla salaman iskusta",
   "obtain.travelersbackpack.deluxe": "Reppu saatavilla Strongholdeista",
@@ -37,7 +37,7 @@
   "block.travelersbackpack.travelers_backpack": "Matkustajan reppu",
   "block.travelersbackpack.sleeping_bag": "Makuupussi",
   
-  "item.travelersbackpack.backpack_tank": "Repin tankki",
+  "item.travelersbackpack.backpack_tank": "Repun tankki",
   "item.travelersbackpack.hose_nozzle": "Letkun suutin",
   "item.travelersbackpack.hose": "Letku",
 
@@ -45,7 +45,7 @@
   "item.travelersbackpack.hose.spill": "Kaatamistila",
   "item.travelersbackpack.hose.drink": "Juomistila",
 
-  "hose.travelersbackpack.not_assigned": "Hose not assigned",
+  "hose.travelersbackpack.not_assigned": "Putki ei määritetty",
   "hose.travelersbackpack.current_mode_suck": "Nykyinent ila: ime",
   "hose.travelersbackpack.current_mode_spill": "Nykyinen tila: kaada",
   "hose.travelersbackpack.current_mode_drink": "Nykyinen tila: juo",
@@ -118,20 +118,20 @@
   "block.travelersbackpack.purple": "Purppura",
   "block.travelersbackpack.rainbow": "Sateenkaari",
   "block.travelersbackpack.red": "Punainen",
-  "block.travelersbackpack.red_mushroom": "Punainen sieni",
+  "block.travelersbackpack.red_mushroom": "Myrkkysieni",
   "block.travelersbackpack.sandstone": "Hiekkakivi",
   "block.travelersbackpack.sheep": "Lammas",
   "block.travelersbackpack.silverfish": "Sokeritoukka",
   "block.travelersbackpack.skeleton": "Luuranko",
-  "block.travelersbackpack.slime": "Lima",
-  "block.travelersbackpack.snow": "Luni",
+  "block.travelersbackpack.slime": "Limakuutio",
+  "block.travelersbackpack.snow": "Lumi",
   "block.travelersbackpack.spider": "Hämähäkki",
   "block.travelersbackpack.sponge": "Pesusieni",
   "block.travelersbackpack.squid": "Mustekala",
   "block.travelersbackpack.sunflower": "Auringonkukka",
   "block.travelersbackpack.white": "Valkoinen",
   "block.travelersbackpack.wither": "Wither",
-  "block.travelersbackpack.wither_skeleton": "Wither Luutanko",
+  "block.travelersbackpack.wither_skeleton": "Wither Luuranko",
   "block.travelersbackpack.yellow": "Keltainen",
   "block.travelersbackpack.zombie": "Zombi"
 }
